# core_kernel

./: dune-project
binary_packing/test-bin/: dune
int_set/test-bin/: dune
tuple_pool/test-bin/: dune
version_util/src/: dune  version_util.wat
