(library
 (foreign_stubs
  (language c)
  (names version_util_fallback_stubs))
 (name version_util)
 (public_name core_kernel.version_util)
 (wasm_of_ocaml
  (wasm_files version_util.wat)
  (javascript_files version_util.js))
 (js_of_ocaml
  (javascript_files version_util.js))
 (libraries core sexplib)
 (preprocess
  (pps ppx_jane)))
